# CopyRight-via-DreamBooth

./: .gitignore  batch_slurm_inference.sh  batch_slurm_train.sh  batch_slurm_train_loss.sh  creare_contrast_image_local.py  create_copyright_contrast_image.py  create_copyright_image.py  create_copyright_images_gemini_api.py  create_copyright_images_local.py  create_paired_copyright_images.py  evaluate.py  evaluate_model.py  example_command.sh  generate.py  generate_chikawa_dataset.py  generate_continue.py  generate_rl.py  generate_robust.py  metrics.py  pyproject.toml  tlora_module.py  train_dreambooth_continue.py  train_dreambooth_copyright.py  train_dreambooth_copyright_local.py  train_dreambooth_lora_sdxl.py  train_dreambooth_lora_sdxl_further_lora.py  train_dreambooth_lora_sdxl_rl.py  train_dreambooth_lora_sdxl_rl_study.py  train_dreambooth_lora_sdxl_robust.py  train_dreambooth_lora_sdxl_robust_study.py  train_dreamboothlora_sdxl_further_full.py  utils.py
data/: prompt.csv
data/cp_chikawa/: prompt.csv
data/cp_chikawa_new/: prompt.csv
data/cp_chikawa_new_2/: prompt.csv
data/dreambooth/: prompt.csv
